# clearaudio

./: .env.example  .gitignore  LICENSE  README.md  RESEARCH.md  THIRD_PARTY_LICENSES.md  package.json
apps/engine/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
apps/engine/src/engine/: __init__.py  fal_service.py  main.py  modal_app.py
apps/engine/tests/: test_api.py  test_fal_service.py
apps/web/: .env.example  drizzle.config.ts  package.json  pnpm-lock.yaml  vercel.json
apps/web/scripts/: send-email.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/api/auth/[...all]/: route.ts
apps/web/src/app/api/generation/: route.ts
apps/web/src/app/api/generation/authorize/: route.ts
apps/web/src/app/api/models/: route.ts
apps/web/src/app/api/send-email/: route.ts
apps/web/src/app/api/separate/: route.ts
apps/web/src/app/api/stripe/checkout/: route.ts
apps/web/src/app/api/upload/: route.ts
apps/web/src/app/api/usage/: route.ts
apps/web/src/app/auth/callback/: page.tsx
apps/web/src/app/auth/google/: page.tsx
apps/web/src/app/g/[id]/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/sign-in/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/components/: AudioPlayer.tsx  MacIcons.tsx  ScrollWrapper.tsx  SignInModal.tsx
apps/web/src/components/ui/: tooltip.tsx
apps/web/src/lib/: auth-client.ts  auth.ts  stripe.ts  usage.ts
apps/web/src/lib/db/: index.ts  schema.ts
(+2 files in other folders)
